[package]
name = "time_value"
version = "0.7.0"
authors = ["Otto Hermann <ojhermann@gmail.com>"]
edition = "2018"
description = "A collection of functions related to time value analysis."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ojhermann/time_value"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3"

[dev-dependencies]
rand = "0.8.2"
